# history4feed

./: .env.example  .env.markdown  .env.obstracts-web  .gitignore  Dockerfile  Dockerfile.deploy  LICENSE  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  run.sh
.github/workflows/: auto-pr-main-to-staging.yml  create-release.yml  create_release.yml  deploy-image-production.yml  deploy-image-staging.yml  deploy-image.yml  deploy-images.yaml  deploy-images.yml  deploy-production-image.yml  deploy-staging-image.yml  new_test.yml  run-tests.yml  run_tests.yml  schemathesis_test.yml
design/mvp/: api.md
docs/: README.md
history4feed/: asgi.py  settings.py  urls.py  wsgi.py
history4feed/app/: apps.py  autoschema.py  models.py  openapi_params.py  serializers.py  settings.py  utils.py  views.py
history4feed/app/migrations/: 0001_initial.py  0002_alter_feed_datetime_added_alter_feed_description_and_more.py  0002_feed_freshness_alter_feed_feed_type.py  0003_alter_feed_description.py  0003_post_job.py  0004_alter_feed_id.py  0004_alter_fulltextjob_status_alter_job_state.py  0005_feed_datetime_modified.py  0005_remove_feed_retrieve_full_text.py  0006_alter_fulltextjob_post.py  0006_job_completion_time.py  0007_feed_include_remote_blogs.py  (+18 more)
history4feed/h4fscripts/: __init__.py  build_rss.py  celery.py  exceptions.py  h4f.py  sitemap_helpers.py  task_helper.py  wayback_helpers.py  xml_utils.py
tests/: README.md  add_fakeblog123_feeds.py  base_test.py  conftest.py  delete_all_feeds.py  delete_fakeblog123_feeds.py  docker-compose.yml  requirements.txt  settings.py  test_01_add_fakeblog123_atom_rss_feeds.py  test_01_add_fakeblog123_feeds.py  test_01_add_feeds.py  test_01_add_feeds_check_ids.py  test_01_check_feed_types.py  test_02_add_external_feeds.py  test_02_add_post.py  test_03_delete_post.py  test_03_manually_add_post.py  test_04_add_skeleton_feed.py  test_04_delete_feed.py  test_05_post_filters.py  test_06_patch_feed.py  test_07_patch_post.py  test_99_delete_all_feeds.py  tests.env  utils.py
tests/src/: test_models.py  test_serializers.py  test_utils.py
tests/st/: .env.schemathesis  docker-compose.yml  hooks.py  st.py  test_schemathesis.py
(+9 files in other folders)
