[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "history4feed"
version = "1.0.5"
authors = [
  { name = "dogesec" }
]
maintainers = [
  { name = "dogesec" }
]
description = "Creates a complete full text historical archive for an RSS or ATOM feed."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "django>=5.2.3",
  "djangorestframework>=3.15.2",
  "drf-spectacular>=0.27.2",
  "celery>=5.4.0; python_version >= '3.8'",
  "psycopg2-binary>=2.9.10",
  "redis",
  "brotlipy>=0.7.0",
  "lxml-html-clean>=0.4.1",
  "fake-useragent>=1.5.1",
  "hyperlink",
  "django-filter>=24.2",
  "dateparser>=1.2.1",
  "whitenoise==6.7.0",
  "readability-lxml",
  "python-dotenv",
  "requests>=2.32.4",
  "gunicorn",
  "dogesec_commons",
]
[project.urls]
Homepage = "https://github.com/muchdogesec/history4feed"
Issues = "https://github.com/muchdogesec/history4feed/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-subtests",
  "pytest-cov",
  "pytest-django",
  "schemathesis",
]
